--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,5 +4,7 @@ description:
 author: fuyuan9 <fu9fu9fu9+github@gmail.com>
 environment:
   sdk: ">=2.6.0 <3.0.0"
+dependencies:
+  ffi: ^0.1.3
 dev_dependencies:
   test: ^1.5.3
